# validator

./: .gitignore  Makefile.am  Makefile.clang  README.md  autogen.sh  blob.c  configure.ac  install.c  main.c  main.h  sign.c  test.sh  utils.c  utils.h  validate.c  validator.spec.in
.github/workflows/: test.yaml
dracut/: module-setup.sh  validator-boot.service
man/: validator-blob.md  validator-config.md  validator-dracut.md  validator-install.md  validator-sign.md  validator-validate.md  validator.md
test-assets/: public.der  secret.pem
test-assets/content/: file1.txt  file1.txt.sig  file2.txt  file2.txt.sig  symlink1.sig
test-assets/content/dir/: file3.txt  file3.txt.sig  symlink2.sig
